WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 61555
Chromium doesn't implement WebCore::MediaPlayer::mediaTimeForTimeValue()
https://bugs.webkit.org/show_bug.cgi?id=61555
Summary
Chromium doesn't implement WebCore::MediaPlayer::mediaTimeForTimeValue()
Aaron Colwell
Reported
2011-05-26 13:32:49 PDT
This is a placeholder bug for Chromium Issue 61166(
http://code.google.com/p/chromium/issues/detail?id=61166
) I'll upload a patch for the Chromium implementation of WebCore::MediaPlayer::mediaTimeForTimeValue() shortly.
Attachments
Patch
(2.97 KB, patch)
2011-05-26 13:57 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
Patch
(4.54 KB, patch)
2011-05-26 14:43 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
Patch
(984 bytes, patch)
2011-05-27 11:31 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
Patch
(979 bytes, patch)
2011-05-31 14:33 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
DEPS Patch
(979 bytes, patch)
2011-05-31 16:08 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
mediaTimeForTimeValue() Patch.
(2.96 KB, patch)
2011-06-01 09:55 PDT
,
Aaron Colwell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Aaron Colwell
Comment 1
2011-05-26 13:57:32 PDT
Created
attachment 95033
[details]
Patch
Aaron Colwell
Comment 2
2011-05-26 14:03:36 PDT
Here is the Chromium side of this patch if you're interested.
http://codereview.chromium.org/7074018/
WebKit Review Bot
Comment 3
2011-05-26 14:11:35 PDT
Comment on
attachment 95033
[details]
Patch
Attachment 95033
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8736357
Aaron Colwell
Comment 4
2011-05-26 14:43:19 PDT
Created
attachment 95046
[details]
Patch
WebKit Review Bot
Comment 5
2011-05-26 15:08:18 PDT
Comment on
attachment 95046
[details]
Patch
Attachment 95046
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8734871
Aaron Colwell
Comment 6
2011-05-27 11:31:58 PDT
Created
attachment 95200
[details]
Patch
WebKit Review Bot
Comment 7
2011-05-27 12:27:04 PDT
Comment on
attachment 95200
[details]
Patch
Attachment 95200
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8740470
Aaron Colwell
Comment 8
2011-05-31 14:33:29 PDT
Created
attachment 95483
[details]
Patch
WebKit Review Bot
Comment 9
2011-05-31 15:02:00 PDT
Comment on
attachment 95483
[details]
Patch
Attachment 95483
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8751770
Aaron Colwell
Comment 10
2011-05-31 16:08:00 PDT
Created
attachment 95501
[details]
DEPS Patch
Aaron Colwell
Comment 11
2011-06-01 09:55:06 PDT
Created
attachment 95618
[details]
mediaTimeForTimeValue() Patch.
WebKit Review Bot
Comment 12
2011-06-01 09:59:54 PDT
Comment on
attachment 95618
[details]
mediaTimeForTimeValue() Patch.
Attachment 95618
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/8751981
Aaron Colwell
Comment 13
2011-06-02 09:29:24 PDT
Ping. Could someone please review these 2 patches. Thanks.
David Levin
Comment 14
2011-06-02 11:14:59 PDT
Comment on
attachment 95618
[details]
mediaTimeForTimeValue() Patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=95618&action=review
> Source/WebKit/chromium/public/WebMediaPlayer.h:138 > + virtual float mediaTimeForTimeValue(float timeValue) const = 0;
How about mediaTimeFromTimeValue? "For" sounds odd.
Aaron Colwell
Comment 15
2011-06-02 12:35:13 PDT
(In reply to
comment #14
)
> (From update of
attachment 95618
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=95618&action=review
> > > Source/WebKit/chromium/public/WebMediaPlayer.h:138 > > + virtual float mediaTimeForTimeValue(float timeValue) const = 0; > > How about mediaTimeFromTimeValue? > "For" sounds odd.
I was just copying the method name from Source/WebCore/platform/graphics/MediaPlayerPrivate.h . Is it worth changing the method name at this middle layer or do you want me to change it all the way up and down the stack?
WebKit Commit Bot
Comment 16
2011-06-02 12:58:28 PDT
Comment on
attachment 95501
[details]
DEPS Patch Clearing flags on attachment: 95501 Committed
r87944
: <
http://trac.webkit.org/changeset/87944
>
WebKit Commit Bot
Comment 17
2011-06-02 17:02:05 PDT
Comment on
attachment 95618
[details]
mediaTimeForTimeValue() Patch. Clearing flags on attachment: 95618 Committed
r87965
: <
http://trac.webkit.org/changeset/87965
>
WebKit Commit Bot
Comment 18
2011-06-02 17:02:10 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 19
2011-06-02 17:25:13 PDT
The commit-queue encountered the following flaky tests while processing
attachment 95618
[details]
: http/tests/websocket/tests/frame-length-overflow.html
bug 61507
(author:
abarth@webkit.org
) The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug