2011-06-02  Aaron Colwell  <acolwell@chromium.org>

Reviewed by David Levin.

        Add mediaTimeForTimeValue() implementation.
        https://bugs.webkit.org/show_bug.cgi?id=61555

        * public/WebMediaPlayer.h:
        * src/WebMediaPlayerClientImpl.cpp:
        (WebKit::WebMediaPlayerClientImpl::mediaTimeForTimeValue):
        * src/WebMediaPlayerClientImpl.h:

Canonical link: https://commits.webkit.org/77441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87965 268f45cc-cd09-0410-ab3c-d52691b4dbfc